add consul and UnitTest

--- a/George.Framework.OrderWebApi/George.Framework.OrderWebApi.csproj
+++ b/George.Framework.OrderWebApi/George.Framework.OrderWebApi.csproj
@@ -9,11 +9,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Consul" Version="0.7.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\George.Framekwork.Consul\George.Framekwork.Consul.csproj" />
+    <ProjectReference Include="..\George.Framework.Models\George.Framework.Models.csproj" />
   </ItemGroup>
 
 </Project>
