--- a/George.Framework.OrderWebApi/appsettings.json
+++ b/George.Framework.OrderWebApi/appsettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "Consul": {
+    "Url": "http://192.168.0.122:8500",
+    "ServiceName": "userapi",
+    "Ip": "192.168.0.121",
+    "ClientPort": 9001,
+    //"ServiceId": "userapi"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
