--- a/George.Framekwork.Consul/George.Framekwork.Consul.csproj
+++ b/George.Framekwork.Consul/George.Framekwork.Consul.csproj
@@ -6,8 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Consul" Version="0.7.2.5" />
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\George.Framework.Models\George.Framework.Models.csproj" />
   </ItemGroup>
 
 </Project>
