--- a/George.Framewok.UserWebApi/George.Framewok.UserWebApi.csproj
+++ b/George.Framewok.UserWebApi/George.Framewok.UserWebApi.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Consul" Version="0.7.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
   </ItemGroup>
 
