--- a/George.Framework.OrderWebApi/George.Framework.OrderWebApi.csproj
+++ b/George.Framework.OrderWebApi/George.Framework.OrderWebApi.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Consul" Version="0.7.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
+    <PackageReference Include="NLog" Version="4.5.7" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +23,12 @@
   <ItemGroup>
     <ProjectReference Include="..\George.Framekwork.Consul\George.Framekwork.Consul.csproj" />
     <ProjectReference Include="..\George.Framework.Models\George.Framework.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
